# ohtupalautukset

./: README.md
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/: pyproject.toml
viikko2/git-branch-harjoitus/: index.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/web-login/src/: app.py
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage  pyproject.toml
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko6/: PULL.md
viikko6/query-language/src/: index.py  matchers.py
viikko7/: referaatti.md
viikko7/src/: game.py  index.py  pelaa.py
