[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["candyliaa <astronomy.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
cowsay = "^6.1"
toml = "^0.10.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
